[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/autoloads/GlobalMusic.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/music/music06.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/music/One Man Symphony - Royalty Free Soundtrack Collection - 40 Counter-Attack.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/music/mainmenumusic03.ogg" type="AudioStream" id=4]

[node name="GlobalMusic" type="Node"]
script = ExtResource( 1 )

[node name="Presentation" type="AudioStreamPlayer" parent="."]

[node name="Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Credits" type="AudioStreamPlayer" parent="."]

[node name="LevelOne" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="LevelOneBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="TweenFadeIn" type="Tween" parent="."]

[node name="TweenFadeOut" type="Tween" parent="."]
[connection signal="tween_completed" from="TweenFadeOut" to="." method="_on_TweenFadeOut_tween_completed"]
